Fix link to Wikipedia

--- a/03_gpu_accel_k_means.ipynb
+++ b/03_gpu_accel_k_means.ipynb
@@ -169,7 +169,7 @@
    "id": "4ca2d27a-2813-483b-809e-ffd171a1e64a",
    "metadata": {},
    "source": [
-    "From [Wikipedia](https://en.wikipedia.org/wiki/K-means_clustering#Standard_algorithm_(naive_k-means)):\n",
+    "From [Wikipedia](https://en.wikipedia.org/wiki/K-means_clustering#Standard_algorithm_%28naive_k-means%29):\n",
     "\n",
     "**Standard algorithm (naive ***k***-means)**\n",
     "\n",
