Improve formatting and add notes

--- a/03_gpu_accel_k_means.ipynb
+++ b/03_gpu_accel_k_means.ipynb
@@ -161,7 +161,7 @@
    "id": "deec8365-b3d5-47bf-bac4-e9aeccdbb3ba",
    "metadata": {},
    "source": [
-    "# k-Means"
+    "## Algorithm"
    ]
   },
   {
@@ -463,8 +463,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.25 s, sys: 0 ns, total: 6.25 s\n",
-      "Wall time: 6.24 s\n"
+      "CPU times: user 6.16 s, sys: 1.72 ms, total: 6.16 s\n",
+      "Wall time: 6.16 s\n"
      ]
     }
    ],
@@ -498,7 +498,7 @@
    "id": "68a3840d-9704-4717-a0af-758bc237ffb6",
    "metadata": {},
    "source": [
-    "# Animation"
+    "## Animation"
    ]
   },
   {
@@ -722,42 +722,42 @@
        "</style>\n",
        "\n",
        "<div class=\"animation\">\n",
-       "  <img id=\"_anim_img4b7b36c0dadc41d5ba16cfa44205fee4\">\n",
+       "  <img id=\"_anim_img2265be1394d842238cfd6315789495cf\">\n",
        "  <div class=\"anim-controls\">\n",
-       "    <input id=\"_anim_slider4b7b36c0dadc41d5ba16cfa44205fee4\" type=\"range\" class=\"anim-slider\"\n",
+       "    <input id=\"_anim_slider2265be1394d842238cfd6315789495cf\" type=\"range\" class=\"anim-slider\"\n",
        "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-       "           oninput=\"anim4b7b36c0dadc41d5ba16cfa44205fee4.set_frame(parseInt(this.value));\">\n",
+       "           oninput=\"anim2265be1394d842238cfd6315789495cf.set_frame(parseInt(this.value));\">\n",
        "    <div class=\"anim-buttons\">\n",
-       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim4b7b36c0dadc41d5ba16cfa44205fee4.slower()\">\n",
+       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim2265be1394d842238cfd6315789495cf.slower()\">\n",
        "          <i class=\"fa fa-minus\"></i></button>\n",
-       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim4b7b36c0dadc41d5ba16cfa44205fee4.first_frame()\">\n",
+       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim2265be1394d842238cfd6315789495cf.first_frame()\">\n",
        "        <i class=\"fa fa-fast-backward\"></i></button>\n",
-       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim4b7b36c0dadc41d5ba16cfa44205fee4.previous_frame()\">\n",
+       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim2265be1394d842238cfd6315789495cf.previous_frame()\">\n",
        "          <i class=\"fa fa-step-backward\"></i></button>\n",
-       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim4b7b36c0dadc41d5ba16cfa44205fee4.reverse_animation()\">\n",
+       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim2265be1394d842238cfd6315789495cf.reverse_animation()\">\n",
        "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim4b7b36c0dadc41d5ba16cfa44205fee4.pause_animation()\">\n",
+       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim2265be1394d842238cfd6315789495cf.pause_animation()\">\n",
        "          <i class=\"fa fa-pause\"></i></button>\n",
-       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim4b7b36c0dadc41d5ba16cfa44205fee4.play_animation()\">\n",
+       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim2265be1394d842238cfd6315789495cf.play_animation()\">\n",
        "          <i class=\"fa fa-play\"></i></button>\n",
-       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim4b7b36c0dadc41d5ba16cfa44205fee4.next_frame()\">\n",
+       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim2265be1394d842238cfd6315789495cf.next_frame()\">\n",
        "          <i class=\"fa fa-step-forward\"></i></button>\n",
-       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim4b7b36c0dadc41d5ba16cfa44205fee4.last_frame()\">\n",
+       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim2265be1394d842238cfd6315789495cf.last_frame()\">\n",
        "          <i class=\"fa fa-fast-forward\"></i></button>\n",
-       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim4b7b36c0dadc41d5ba16cfa44205fee4.faster()\">\n",
+       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim2265be1394d842238cfd6315789495cf.faster()\">\n",
        "          <i class=\"fa fa-plus\"></i></button>\n",
        "    </div>\n",
-       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select4b7b36c0dadc41d5ba16cfa44205fee4\"\n",
+       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select2265be1394d842238cfd6315789495cf\"\n",
        "          class=\"anim-state\">\n",
-       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_4b7b36c0dadc41d5ba16cfa44205fee4\"\n",
+       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_2265be1394d842238cfd6315789495cf\"\n",
        "             checked>\n",
-       "      <label for=\"_anim_radio1_4b7b36c0dadc41d5ba16cfa44205fee4\">Once</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_4b7b36c0dadc41d5ba16cfa44205fee4\"\n",
+       "      <label for=\"_anim_radio1_2265be1394d842238cfd6315789495cf\">Once</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_2265be1394d842238cfd6315789495cf\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio2_4b7b36c0dadc41d5ba16cfa44205fee4\">Loop</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_4b7b36c0dadc41d5ba16cfa44205fee4\"\n",
+       "      <label for=\"_anim_radio2_2265be1394d842238cfd6315789495cf\">Loop</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_2265be1394d842238cfd6315789495cf\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio3_4b7b36c0dadc41d5ba16cfa44205fee4\">Reflect</label>\n",
+       "      <label for=\"_anim_radio3_2265be1394d842238cfd6315789495cf\">Reflect</label>\n",
        "    </form>\n",
        "  </div>\n",
        "</div>\n",
@@ -767,9 +767,9 @@
        "  /* Instantiate the Animation class. */\n",
        "  /* The IDs given should match those used in the template above. */\n",
        "  (function() {\n",
-       "    var img_id = \"_anim_img4b7b36c0dadc41d5ba16cfa44205fee4\";\n",
-       "    var slider_id = \"_anim_slider4b7b36c0dadc41d5ba16cfa44205fee4\";\n",
-       "    var loop_select_id = \"_anim_loop_select4b7b36c0dadc41d5ba16cfa44205fee4\";\n",
+       "    var img_id = \"_anim_img2265be1394d842238cfd6315789495cf\";\n",
+       "    var slider_id = \"_anim_slider2265be1394d842238cfd6315789495cf\";\n",
+       "    var loop_select_id = \"_anim_loop_select2265be1394d842238cfd6315789495cf\";\n",
        "    var frames = new Array(20);\n",
        "    \n",
        "  frames[0] = \"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAoAAAAHgCAYAAAA10dzkAAAAOXRFWHRTb2Z0d2FyZQBNYXRwbG90\\\n",
@@ -10376,7 +10376,7 @@
        "    /* set a timeout to make sure all the above elements are created before\n",
        "       the object is initialized. */\n",
        "    setTimeout(function() {\n",
-       "        anim4b7b36c0dadc41d5ba16cfa44205fee4 = new Animation(frames, img_id, slider_id, 500.0,\n",
+       "        anim2265be1394d842238cfd6315789495cf = new Animation(frames, img_id, slider_id, 500.0,\n",
        "                                 loop_select_id);\n",
        "    }, 0);\n",
        "  })()\n",
@@ -10405,7 +10405,7 @@
    "id": "a4f7bc61-6da0-4747-b92b-8bcda3291d70",
    "metadata": {},
    "source": [
-    "# GPU Accelerated Algorithm"
+    "## GPU-Accelerated Algorithm"
    ]
   },
   {
@@ -10649,8 +10649,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 123 ms, sys: 45.9 ms, total: 169 ms\n",
-      "Wall time: 168 ms\n"
+      "CPU times: user 111 ms, sys: 39.1 ms, total: 150 ms\n",
+      "Wall time: 149 ms\n"
      ]
     }
    ],
@@ -10685,6 +10685,18 @@
    "metadata": {},
    "source": [
     "The GPU accelerated algorithm runs in 168 ms, while the algorithm on CPU takes 6.24 seconds to run, a speedup of about 37 times!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f4a5dcb-dc86-4b87-9d9f-b8ac950f58d9",
+   "metadata": {},
+   "source": [
+    "## Notes\n",
+    "\n",
+    "1. Did not use convergence checking.\n",
+    "2. Did not restart algorithm to find best fit.\n",
+    "3. Comparing the \"Pythonic\" algorithm on CPU to the vectorised algorithm on GPU was probably not fair. However, comparing the vectorised algorithm on both still shows a speedup, albeit a smaller one."
    ]
   }
  ],
